[package]
name = "pipe"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
ariadne = "0.1.3"
chumsky = { path = "../chumsky"}
indexmap = "1.7.0"
indoc = "1.0.3"
wasmtime = "0.31.0"
wasmtime-wasi = "0.31.0"

[dev-dependencies]
pretty_assertions = "1.0.0"
